samples/_failures_safe/1761470982_ed0a76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41d5ea4e.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_41d5ea4e.c:164:22: error: expected ‘)’ at end of input
  164 |     switch (max_index
      |            ~         ^
      |                      )
./samples/SAFE/__tmp_41d5ea4e.c:164:5: error: expected declaration or statement at end of input
  164 |     switch (max_index
      |     ^~~~~~
